build: version bump